--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,9 +1,17 @@
+nagrestconf (1.0.7) UNRELEASED; urgency=low
+
+  * Added nagios objects: service dependencies, host dependencies,
+    service escalations, host escalations, extra service info and
+    extra host info.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Wed, 07 Nov 2012 21:46:22 +0000
+
 nagrestconf (1.0.6) UNRELEASED; urgency=low
 
   * Added more nagios directives to the REST api. Host/Service groups and
     timeperiods now complete.
 
- -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Tue, 05 Nov 2012 12:21:22 +0000
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Mon, 05 Nov 2012 12:21:22 +0000
 
 nagrestconf (1.0.5) UNRELEASED; urgency=low
 
