--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -15,10 +15,10 @@ nagrestconf (1.0.6) UNRELEASED; urgency=low
 
 nagrestconf (1.0.5) UNRELEASED; urgency=low
 
-  * Added more nagios directives to the REST api. Services now complete.
+  * Added more nagios directives to the REST api. Services and servicesets now complete.
   * Added more nagios directives to the REST api. Host templates now complete.
 
- -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Tue, 01 Nov 2012 15:31:32 +0100
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Sun, 04 Nov 2012 22:19:32 +0000
 
 nagrestconf (1.0.4) UNRELEASED; urgency=low
 
