--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.0.9) UNRELEASED; urgency=low
+
+  * Added schedulehostdowntime and delhostdowntime
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Wed, 14 Nov 2012 20:59:42 +0000
+
 nagrestconf (1.0.8) UNRELEASED; urgency=low
 
   * Bugfixes
